añadir nombre al html

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 
     <div class="header">
-        <h1>Sergio león es una ratita de dos patas</h1>
+        <h1>Sergio Hernández</h1>
         <p>Resize the browser window to see the responsive effect.</p>
     </div>
 
